--- a/TownSuite.Web.SSV3Facade/TownSuite.Web.SSV3Facade.csproj
+++ b/TownSuite.Web.SSV3Facade/TownSuite.Web.SSV3Facade.csproj
@@ -6,18 +6,18 @@
     <Nullable>enable</Nullable>
 
     
-    <AssemblyTitle>TownSuite.Web.SSV3Facase</AssemblyTitle>
-    <Company>TownSuite Muncipal Software Inc.</Company>
-    <Product>Service Stack Version 3 Facade</Product>
-    <Description>Helper route middleware to simulate service stack version 3.
-        This to help port .net framework service stac 3 code to
+    <AssemblyTitle>TownSuite.Web.SSV3Facade</AssemblyTitle>
+    <Company>TownSuite Municipal Software Inc.</Company>
+    <Product>SSV3 Facade Middleware</Product>
+    <Description>Helper route middleware to fake service stack version 3.
+        This is to help port .net framework service stack 3 code to
         net6.0 and asp.net core web api.</Description>
     <Copyright>TownSuite Muncipal Software Inc. 2021</Copyright>
     <Deterministic>true</Deterministic>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
-    <Version>1.0.0</Version>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
-    <FileVersion>1.0.0</FileVersion>
+    <Version>1.0.1</Version>
+    <AssemblyVersion>1.0.1</AssemblyVersion>
+    <FileVersion>1.0.1</FileVersion>
 
     <PackageLicenseExpression>BSD-3-Clause</PackageLicenseExpression>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -31,5 +31,8 @@
    </ItemGroup>
    <ItemGroup>
      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+   </ItemGroup>
+   <ItemGroup>
+     <ProjectReference Include="..\TownSuite.Web.SSV3Facade.Interfaces\TownSuite.Web.SSV3Facade.Interfaces.csproj" />
    </ItemGroup>
 </Project>
