--- a/TownSuite.Web.Example/appsettings.Development.json
+++ b/TownSuite.Web.Example/appsettings.Development.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "TestDb": "Server=sql_service;Database=test_data;User Id=SA;Password=ThePassword321&;trustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,4 +9,3 @@
     }
   }
 }
-
