--- a/TownSuite.Web.Example/TownSuite.Web.Example.csproj
+++ b/TownSuite.Web.Example/TownSuite.Web.Example.csproj
@@ -4,12 +4,17 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DockerComposeProjectPath>../docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>8471c1bb-9866-4903-a6df-2be134837727</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="prometheus-net.AspNetCore" Version="5.0.2" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,8 +32,5 @@
     <None Remove="ServiceStackExample\" />
     <None Remove="Newtonsoft.Json" />
     <None Remove="prometheus-net.AspNetCore" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ServiceStackExample\" />
   </ItemGroup>
 </Project>
