--- a/TownSuite.Web.SSV3Facade.Prometheus/TownSuite.Web.SSV3Facade.Prometheus.csproj
+++ b/TownSuite.Web.SSV3Facade.Prometheus/TownSuite.Web.SSV3Facade.Prometheus.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="prometheus-net.AspNetCore" Version="5.0.2" />
+    <PackageReference Include="Microsoft.Extensions.DiagnosticAdapter" Version="3.1.22" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TownSuite.Web.SSV3Facade.Interfaces\TownSuite.Web.SSV3Facade.Interfaces.csproj" />
