--- a/TownSuite.Web.SSV3Facade/TownSuite.Web.SSV3Facade.csproj
+++ b/TownSuite.Web.SSV3Facade/TownSuite.Web.SSV3Facade.csproj
@@ -1,38 +1,39 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
 
-    
-    <AssemblyTitle>TownSuite.Web.SSV3Facade</AssemblyTitle>
-    <Company>TownSuite Municipal Software Inc.</Company>
-    <Product>SSV3 Facade Middleware</Product>
-    <Description>Helper route middleware to fake service stack version 3.
-        This is to help port .net framework service stack 3 code to
-        net6.0 and asp.net core web api.</Description>
-    <Copyright>TownSuite Muncipal Software Inc. 2021</Copyright>
-    <Deterministic>true</Deterministic>
-    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
-    <Version>1.0.8</Version>
-    <AssemblyVersion>1.0.8</AssemblyVersion>
-    <FileVersion>1.0.8</FileVersion>
 
-    <PackageLicenseExpression>BSD-3-Clause</PackageLicenseExpression>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-  </PropertyGroup>
+        <AssemblyTitle>TownSuite.Web.SSV3Facade</AssemblyTitle>
+        <Company>TownSuite Municipal Software Inc.</Company>
+        <Product>SSV3 Facade Middleware</Product>
+        <Description>Helper route middleware to fake service stack version 3.
+            This is to help port .net framework service stack 3 code to
+            net6.0 and asp.net core web api.
+        </Description>
+        <Copyright>TownSuite Muncipal Software Inc. 2021</Copyright>
+        <Deterministic>true</Deterministic>
+        <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+        <Version>1.0.8</Version>
+        <AssemblyVersion>1.0.8</AssemblyVersion>
+        <FileVersion>1.0.8</FileVersion>
 
-   <ItemGroup>
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
-   <ItemGroup>
-     <None Remove="Newtonsoft.Json" />
-   </ItemGroup>
-   <ItemGroup>
-     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-   </ItemGroup>
-   <ItemGroup>
-     <ProjectReference Include="..\TownSuite.Web.SSV3Facade.Interfaces\TownSuite.Web.SSV3Facade.Interfaces.csproj" />
-   </ItemGroup>
+        <PackageLicenseExpression>BSD-3-Clause</PackageLicenseExpression>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+    </ItemGroup>
+    <ItemGroup>
+        <None Remove="Newtonsoft.Json"/>
+    </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\TownSuite.Web.SSV3Facade.Interfaces\TownSuite.Web.SSV3Facade.Interfaces.csproj"/>
+    </ItemGroup>
 </Project>
