--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,3 +23,10 @@ jobs:
       run: dotnet build TownSuite.Web.SSV3Facade.sln --no-restore
     - name: Test
       run: dotnet test TownSuite.Web.SSV3Facade.sln --no-build --verbosity normal
+    - name: Archive artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: nuget-packages
+        path: |
+          **/bin/Release/*.nupkg
+        retention-days: 1
