--- a/TownSuite.Web.SSV3Adapter/TownSuite.Web.SSV3Adapter.csproj
+++ b/TownSuite.Web.SSV3Adapter/TownSuite.Web.SSV3Adapter.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
@@ -32,6 +32,7 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
+        <PackageReference Include="Microsoft.OpenApi" Version="1.6.14" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\TownSuite.Web.SSV3Adapter.Interfaces\TownSuite.Web.SSV3Adapter.Interfaces.csproj"/>
