--- a/TownSuite.Web.Tests/TownSuite.Web.Tests.csproj
+++ b/TownSuite.Web.Tests/TownSuite.Web.Tests.csproj
@@ -14,6 +14,10 @@
         <None Remove="Newtonsoft.Json"/>
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="coverlet.collector" Version="6.0.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="NUnit" Version="3.13.3"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.3.0"/>
         <PackageReference Include="NunitXml.TestLogger" Version="3.0.127"/>
