--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,6 +28,18 @@ jobs:
           name: Unit Tests
           path: "**/TestResults/*.trx"
           reporter: dotnet-trx
+      - name: Code Coverage Summary Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: "**/TestResults/**/coverage.cobertura.xml"
+          badge: true
+          fail_below_min: true
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: true
+          indicators: true
+          output: both
+          thresholds: "60 80"
       - name: Archive artifacts
         uses: actions/upload-artifact@v4
         with:
