--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,6 +40,8 @@ jobs:
           indicators: true
           output: both
           thresholds: "60 80"
+      - name: Write Code Coverage to Job Summary
+        run: cat **code-coverage-results.md** >> $GITHUB_STEP_SUMMARY
       - name: Archive artifacts
         uses: actions/upload-artifact@v4
         with:
