--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: success() || failure() # run this step even if previous step failed
         with:
-          name: Unit Tests
+          name: unit tests
           path: "**/TestResults/*.trx"
           reporter: dotnet-trx
       - name: Code Coverage Summary Report
@@ -40,8 +40,6 @@ jobs:
           indicators: true
           output: both
           thresholds: "60 80"
-      - name: Write Code Coverage to Job Summary
-        run: cat **code-coverage-results.md** >> $GITHUB_STEP_SUMMARY
       - name: Archive artifacts
         uses: actions/upload-artifact@v4
         with:
