--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,13 @@ jobs:
         run: dotnet build -c Release TownSuite.Web.SSV3Adapter.sln --no-restore
       - name: Tests
         run: dotnet test -c Release TownSuite.Web.SSV3Adapter.sln --verbosity normal --collect:"XPlat Code Coverage" --logger:"trx" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.ExcludeByFile='**/TownSuite.Web.Example/*.cs'
+      - name: Upload Code Coverage
+        uses: actions/upload-artifact@v4
+        with:
+          name: code-coverage-artifacts
+          path: |
+            **/TestResults/**/coverage.cobertura.xml
+          retention-days: 1
       - name: Test Report
         uses: dorny/test-reporter@v1
         if: success() || failure() # run this step even if previous step failed
@@ -28,19 +35,7 @@ jobs:
           name: unit tests
           path: "**/TestResults/*.trx"
           reporter: dotnet-trx
-      - name: Code Coverage Summary Report
-        uses: irongut/CodeCoverageSummary@v1.3.0
-        with:
-          filename: "**/TestResults/**/coverage.cobertura.xml"
-          badge: true
-          fail_below_min: true
-          format: markdown
-          hide_branch_rate: false
-          hide_complexity: true
-          indicators: true
-          output: both
-          thresholds: "60 80"
-      - name: Archive artifacts
+      - name: Archive nuget artifacts
         uses: actions/upload-artifact@v4
         with:
           name: nuget-packages
@@ -53,3 +48,28 @@ jobs:
         uses: CycloneDX/gh-dotnet-generate-sbom@v1
         with:
           path: ./TownSuite.Web.SSV3Adapter.sln
+  code-coverage:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: code-coverage-artifacts
+          path: code-coverage-artifacts
+      - name: Code Coverage Summary Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: "**/TestResults/**/coverage.cobertura.xml"
+          badge: true
+          fail_below_min: true
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: true
+          indicators: true
+          output: both
+          thresholds: "60 80"
+      - name: Add Coverage PR Comment
+        uses: marocchino/sticky-pull-request-comment@v2
+        if: github.event_name == 'pull_request'
+        with:
+          recreate: true
+          path: code-coverage-results.md
