--- a/TownSuite.Web.SSV3Adapter.Prometheus/TownSuite.Web.SSV3Adapter.Prometheus.csproj
+++ b/TownSuite.Web.SSV3Adapter.Prometheus/TownSuite.Web.SSV3Adapter.Prometheus.csproj
@@ -1,21 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
+        <TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-
         <AssemblyTitle>TownSuite.Web.SSV3Adapter.Prometheus</AssemblyTitle>
-        <Company>TownSuite Municipal Software Inc.</Company>
-        <Product>SSV3 Prometheus Implementation</Product>
-        <Description>Optional prometheus metrics implementation.</Description>
-        <Copyright>TownSuite Muncipal Software Inc. 2021</Copyright>
-        <Deterministic>true</Deterministic>
         <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
-        <Version>1.0.23</Version>
-        <AssemblyVersion>1.0.23</AssemblyVersion>
-        <FileVersion>1.0.23</FileVersion>
-
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
